--- a/yard/src/main/resources/application-dev.yml
+++ b/yard/src/main/resources/application-dev.yml
@@ -2,3 +2,9 @@
 name: yard
 server:
   port: 9901
+
+#自定义变量配置
+DBMS_DRIVER：oracle.jdbc.driver.OracleDriver
+DBMS_URL：jdbc:oracle:thin:@192.168.188.138:1521:JSDB
+DBMS_USER：li_base
+DBMS_PASS：li_base
